--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   
   <body>
